--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "web": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
+    "build": "cd android/ && ./gradlew assembleRelease",
     "ios": "react-native run-ios",
     "android": "react-native run-android",
     "test": "jest --coverage",
@@ -16,12 +16,14 @@
     "react-dom": "^16.4.1",
     "react-native": "0.56.0",
     "react-native-web": "^0.8.8",
+    "react-navigation": "^3.0.9",
     "react-scripts-ts": "^2.16.0"
   },
   "devDependencies": {
     "@types/jest": "^23.3.0",
     "@types/react": "^16.4.6",
     "@types/react-native": "^0.56.3",
+    "@types/react-navigation": "^3.0.1",
     "@types/react-test-renderer": "^16.0.1",
     "babel-jest": "23.4.0",
     "babel-preset-react-native": "4.0.0",
