登录/注册页,统一api,使用element

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "module": "esnext",
-    "target": "es5",
+    "target": "esnext",
     "baseUrl": ".",
     "lib": ["es6", "dom"],
     "sourceMap": true,
