--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,7 @@
 	"import/no-unresolved": 0,
 	"no-underscore-dangle":0,
 	"no-use-before-define":1,
+	"consistent-return":0,
     "indent": [
 		"error",
 		"tab",
