--- a/package.json
+++ b/package.json
@@ -3,27 +3,31 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-	"reload":"adb shell input keyevent 82",
+    "reload": "adb shell input keyevent 82",
     "build": "cd android/ && ./gradlew assembleRelease",
     "ios": "react-native run-ios",
     "dev": "react-native run-android",
+    "log": "react-native log-android",
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "clean": "cd android/ &&./gradlew clean"
   },
   "dependencies": {
+    "lodash": "^4.17.11",
     "prop-types": "^15.6.0",
     "react": "16.0.0-beta.5",
     "react-native": "0.49.3",
-    "react-native-elements": "^0.18.4",
+    "react-native-elements": "^0.19.1",
     "react-native-extended-stylesheet": "^0.8.0",
-    "react-native-vector-icons": "^4.4.2",
+    "react-native-storage": "^1.0.0-beta.0",
+    "react-native-vector-icons": "^6.0.0",
     "react-navigation": "^1.0.0-beta.21",
     "react-redux": "^5.0.6",
+    "react-scripts-ts": "^2.16.0",
     "redux": "^3.7.2",
-    "redux-logger": "^3.0.6",
-    "react-scripts-ts": "^2.16.0"
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.120",
     "babel-eslint": "^10.0.1",
     "babel-jest": "21.2.0",
     "babel-preset-react-native": "4.0.0",
@@ -33,8 +37,8 @@
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-react": "^7.12.4",
     "jest": "21.2.1",
-    "react-test-renderer": "16.0.0-beta.5",
     "react-native-typescript-transformer": "^1.2.10",
+    "react-test-renderer": "16.0.0-beta.5",
     "typescript": "^2.9.2"
   },
   "jest": {
