--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.49.3",
     "react-native-elements": "^0.19.1",
     "react-native-extended-stylesheet": "^0.8.0",
+    "react-native-page-scrollview": "^1.0.2",
     "react-native-storage": "^1.0.0-beta.0",
     "react-native-vector-icons": "^6.0.0",
     "react-navigation": "^1.0.0-beta.21",
