--- a/.eslintrc
+++ b/.eslintrc
@@ -8,37 +8,38 @@
     }
   },
   "rules": {
-	"no-nested-ternary":0,
-	"no-param-reassign":0,
-	"prefer-const":0,
-	"prefer-destructuring":0,
-	"no-unused-expressions":0,
-	"no-plusplus":0,
+    "no-lone-blocks": 0,
+    "no-nested-ternary": 0,
+    "no-param-reassign": 0,
+    "prefer-const": 0,
+    "prefer-destructuring": 0,
+    "no-unused-expressions": 0,
+    "no-plusplus": 0,
     "react/jsx-uses-vars": 1,
     "react/jsx-uses-react": 1,
     "no-tabs": 0,
     "class-methods-use-this": 0,
-	"import/no-unresolved": 0,
-	"no-underscore-dangle":0,
-	"no-use-before-define":1,
-	"consistent-return":0,
+    "import/no-unresolved": 0,
+    "no-underscore-dangle": 0,
+    "no-use-before-define": 1,
+    "consistent-return": 0,
     "indent": [
-		"error",
-		"tab",
-		{
-			"SwitchCase": 1
-		}
-	],
-	"comma-dangle": 0,
-	"max-len":0,
-	"quotes": ["error", "double"],
-	"no-unused-vars":1,
-	"no-useless-constructor":0,
+      "error",
+      "tab",
+      {
+        "SwitchCase": 1
+      }
+    ],
+    "comma-dangle": 0,
+    "max-len": 0,
+    "quotes": ["error", "double"],
+    "no-unused-vars": 1,
+    "no-useless-constructor": 0,
     "import/prefer-default-export": 0
   },
   "plugins": ["react"],
   "globals": {
-	"it": true,
+    "it": true,
     "fetch": true,
     "navigator": true,
     "window": true,
