--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
     }
   },
   "rules": {
+    "no-throw-literal": 1,
     "no-lone-blocks": 0,
     "no-nested-ternary": 0,
     "no-param-reassign": 0,
